[package]
name = "rustybarnacle"
version = "0.1.0"
authors = ["Lee Ingram <lee@soylentcola.com>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
rpg = "0.0.2"
diesel = { version = "0.14.0", features = ["postgres"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
dotenv = "0.9.0"
